CHANGE LOG: NUKEVIET CMS
http://nukeviet.vn
NUKEVIET 4.5.02
- Module news: add article history feature
- Fix redirects in banners module
- RSS-Feed: Show atom:link only when it is defined
- Fix the error of displaying the statistics chart of the module banners
- Fix search error in module news (#3452)
- Fix login error via facebook, google (#3445)
- Module news: add search by time in admin
- Module users: add search user by group in admin (#2857)
- Added warning of unencrypted data when the site is not using SSL
- Compatible with php 8.1
- Module news: Fix the option to display the homepage on mobile
- Fix XSS bug. Thanks abstrabakus at WhiteHub#2968
- Fix Error cannot create firewall account (#3403)
- Add coccoc bot for class BotManager
- Redefine host, port, client-side protocol if forwarded
- Fix image upload error (#3386)
- Add API authentication method: none
- Update permissions to use Zalo module

NUKEVIET 4.5.01
- Add some security emails (#3016)
- Add "Development mode" option when installing (#2939)
- Add Zalo login, two-step authentication with Zalo
- System package addition: tecnickcom/tc-lib-barcode (v1.17.6)
- System package updates: polyfill-mbstring (v1.23.0 => v1.18.1, for PHP ^5.6 support), phpmailer/phpmailer (v6.5.0 => v6.5.1)
- System package removal: symfony/options-resolver, endroid/qrcode
- System: Centralized Captcha Management #3348
- All modules: Fix $page_url definition
- System: Fix error in getCanonicalUrl function

NUKEVIET 4.5.00
- Configure variable "page_title" relative to func_site_title
- Update Browser class to v1.9.6
- Update Chart.js to v3.3.2, jquery.js to v3.6, jQuery Validation Plugin to v1.19.3, clipboard.js to v2.0.8, Select2.js to v.4.1.0-rc.0, jquery.timeago.js to version 1.6.7, CKeditor to v4.16.1